# Build-another-Windows-app

./: README.md  package.json
.github/workflows/: build-windows.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
