[package]
name = "gentle-phone-transfer"
version = "0.1.0"
description = "Gentle Phone Transfer Utility"
authors = ["GentleSite"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
whoami = "1"
md5 = "0.7"

[build-dependencies]
tauri-build = "2"
